--- a/style.css
+++ b/style.css
@@ -1,12 +1,14 @@
-body{
-    background-color: bisque;
+html, body{
+    background-color: rgb(195, 114, 16);
+    margin: 0px;
+    overflow: hidden;
 }
 
 #gridDiv {
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 20px;
+    /* padding: 20px; */
 }
 
 .controlsDiv {
